--- a/index.html
+++ b/index.html
@@ -18,6 +18,209 @@
 </head>
 
 <body>
+  <div class="container">
+    <header>
+      <button class="btn">Speaker View</button>
+      <button class="btn"><i class="fas fa-expand-arrows-alt" aria-hidden="true"></i></button>
+    </header>
+    <main>
+      <ul class="thumbs">
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+        <li class="thumb-item">
+          <img class="thumb-img"
+            src="https://i.picsum.photos/id/563/246/146.jpg?hmac=d39C_SksRtdX_mJS3O_14m2ylsUPgw4GdDrMaa6wyWE" alt="">
+          <div class="thumb-name"><i class="fas fa-microphone-slash" aria-hidden="true"></i> Pinco Pallo</div>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <div class="footer-left">
+        <ul class="footer-menu">
+          <li class="doble-btn">
+            <button class="btn"><i class="fas fa-microphone fa-2x" aria-hidden="true"></i> <span> Mute</span></button>
+            <button class="btn"><i class="fas fa-angle-up" aria-hidden="true"></i></button>
+          </li>
+          <li class="doble-btn">
+            <button class="btn"><i class="fas fa-video fa-2x" aria-hidden="true"></i> <span> Stop Video</span></button>
+            <button class="btn"><i class="fas fa-angle-up" aria-hidden="true"></i></button>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-center">
+        <ul class="footer-menu">
+          <!-- <li><button class="btn btn-icon">
+              <i class="fas fa-user-plus fa-2x" aria-hidden="true"></i>
+              <span>Invite</span>
+            </button></li>
+          <li><button class="btn btn-icon">
+              <i class="fas fa-user-friends fa-2x" aria-hidden="true"></i>
+              <span>Manage Participants</span>
+            </button></li>
+          <li><button class="btn btn-icon">
+              <i class="fas fa-chart-bar fa-2x" aria-hidden="true"></i>
+              <span>Polling</span>
+            </button></li> -->
+          <li class="doble-btn">
+            <button class="btn green">
+              <i class="fas fa-share-square fa-2x" aria-hidden="true"></i>
+              <span>Share Screen</span>
+            </button>
+            <button class="btn btn-icon">
+              <i class="fas fa-angle-up" aria-hidden="true"></i>
+            </button>
+          </li>
+          <!-- <li><button class="btn btn-icon">
+              <i class="fas fa-comment fa-2x" aria-hidden="true"></i>
+              <span>Chat</span>
+            </button></li>
+          <li><button class="btn btn-icon">
+              <i class="fas fa-record-vinyl fa-2x" aria-hidden="true"></i>
+              <span>Record</span>
+            </button></li>
+          <li><button class="btn btn-icon">
+              <i class="fas fa-th-large fa-2x" aria-hidden="true"></i>
+              <span>Breakout Rooms</span>
+            </button></li>
+          <li><button class="btn btn-icon">
+              <i class="fas fa-ellipsis-h fa-2x" aria-hidden="true"></i>
+              <span>More</span>
+            </button></li> -->
+        </ul>
+      </div>
+      <div class="footer-right">
+        <button class="btn red">End Meeting</button>
+      </div>
+    </footer>
+  </div>
 
 </body>
 
